Fix Bug 313719 - A URL followed by a ) is parsed incorrectly in message viewer

now we can set correct url when we finish url by ). or other special exclude characters

FIXED-IN: 4.10.1
BUG: 313719